...
                              color: Color(midnightGreen),
                            ),
                          ),
                          const SizedBox(height: 10),
                          widget.currentOrderBasket.isEmpty
                              ? const Text(
                                  "Twój koszyk jest pusty.",
                                  style: TextStyle(
                                    color: Color(richBlack),
                                  ),
                                )
                              : Column(
                                  children: widget.currentOrderBasket
...
                    elevation: 5,
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(30),
                    ),
                  ),
                  child: const Text(
                    'Zapłać za zamówienie',
                    style: TextStyle(
                      fontSize: 18,
                    ),
                  ),
                ),
                const SizedBox(height: 20),
...
